
* SOLR-16568: Upgrade woodstox-core to 6.4.0 (Kira Traynor)

* SOLR-16598: Upgrade Protobuf to 3.21.12 (David Smiley)

* SOLR-16567: Fixed problem with filtering and KNN search, especially when using post-filters (Alessandro Benedetti)

* SOLR-16588: Fixed problem with default knn algorithm (Elia Porciani via Alessandro Benedetti)

==================  9.1.0 ==================

New Features
---------------------
* SOLR-16246: Introduced pre-filtering in KnnQParser (Elia Porciani via Alessandro Benedetti).

* SOLR-16111: Add hl.queryFieldPattern support, an advanced alternative to the hl.requireFieldMatch boolean flag.
  (Christine Poerschke, David Smiley)

* SOLR-15921: Load jars in <solr-install-dir>/lib/ by default (janhoy)

* SOLR-16005: Support add/update/delete field types in Admin UI Schema page.  (Ahmet Can Kepenek, Eric Pugh)

* SOLR-15853: Admin UI support for managing Paramsets and using in Queries. (Betul Ince, Eric Pugh)

* SOLR-16096: Support createNodeSet parameter when creating collections in Admin UI.   (Eric Pugh)

* SOLR-14319: Add ability to specify replica types when creating collections in Admin UI. (Richard Goodman, Eric Pugh)

* SOLR-16282: CoreAdminHandler supports custom actions via solr.xml configuration. (Artem Abeleshev, Christine Poerschke)

* SOLR-15007: Add ability to roll up core level metrics to be node level metrics for a RequestHandler via configuration. (Justin Sweeney, David Smiley)

* SOLR-15715: Dedicated query coordinator nodes in the solr cluster (noble, Hitesh Khamesra, Ishan Chattopadhyaya)

Improvements
---------------------
* SOLR-15986: CommitUpdateCommand and SplitIndexCommand can write user commit metadata. (Bruno Roustant)

* SOLR-15652: Add Slack channel for community support to Admin UI footer, update links.  (Eric Pugh)

* SOLR-16002: Avoid redundant `FilterQuery` caching, e.g. via `filter($query)` syntax. (Michael Gibney, David Smiley)
