@@ -35,6 +35,7 @@ import org.apache.solr.common.SolrException.ErrorCode;
 import org.apache.solr.common.cloud.ClusterState;
 import org.apache.solr.common.cloud.DocCollection;
 import org.apache.solr.common.cloud.SolrZkClient;
+import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.common.cloud.ZkStateReader;
 import org.apache.solr.common.util.Utils;
 import org.apache.solr.core.ConfigSetService;
@@ -332,10 +333,15 @@ public class BackupManager {
     for (String filePath : filePaths) {
       URI uri = repository.resolve(dir, filePath);
       if (!filePath.endsWith("/")) {
-        log.debug("Writing file {}", filePath);
-        byte[] data = configSetService.downloadFileFromConfig(configName, filePath);
-        try (OutputStream os = repository.createOutput(uri)) {
-          os.write(data);
+        if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(filePath)) {
+          log.warn(
+              "Not including zookeeper file in backup, as it is a forbidden type: {}", filePath);
+        } else {
+          log.debug("Writing file {}", filePath);
+          byte[] data = configSetService.downloadFileFromConfig(configName, filePath);
+          try (OutputStream os = repository.createOutput(uri)) {
+            os.write(data);
+          }
         }
       } else {
         if (!repository.exists(uri)) {
@@ -355,11 +361,16 @@ public class BackupManager {
       switch (t) {
         case FILE:
           {
-            try (IndexInput is = repository.openInput(sourceDir, file, IOContext.DEFAULT)) {
-              // probably ok since the config file should be small.
-              byte[] arr = new byte[(int) is.length()];
-              is.readBytes(arr, 0, (int) is.length());
-              configSetService.uploadFileToConfig(configName, filePath, arr, false);
+            if (ZkMaintenanceUtils.isFileForbiddenInConfigSets(filePath)) {
+              log.warn(
+                  "Not including zookeeper file in restore, as it is a forbidden type: {}", file);
+            } else {
+              try (IndexInput is = repository.openInput(sourceDir, file, IOContext.DEFAULT)) {
+                // probably ok since the config file should be small.
+                byte[] arr = new byte[(int) is.length()];
+                is.readBytes(arr, 0, (int) is.length());
+                configSetService.uploadFileToConfig(configName, filePath, arr, false);
+              }
             }
             break;
           }
