@@ -84,6 +84,7 @@ import org.apache.solr.client.solrj.response.schema.SchemaResponse;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.SolrInputDocument;
 import org.apache.solr.common.cloud.SolrZkClient;
+import org.apache.solr.common.cloud.ZkMaintenanceUtils;
 import org.apache.solr.common.params.CollectionParams.CollectionAction;
 import org.apache.solr.common.params.ConfigSetParams;
 import org.apache.solr.common.params.ConfigSetParams.ConfigSetAction;
@@ -581,13 +582,14 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertEquals(
           "Can't overwrite an existing configset unless the overwrite parameter is set",
           400,
-          uploadConfigSet(configsetName, configsetSuffix, null, false, false, v2));
+          uploadConfigSet(configsetName, configsetSuffix, null, false, false, v2, false));
       unIgnoreException("The configuration regulartestOverwrite-1 already exists in zookeeper");
       assertEquals(
           "Expecting version to remain equal",
           solrconfigZkVersion,
           getConfigZNodeVersion(zkClient, configsetName, configsetSuffix, "solrconfig.xml"));
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2));
+      assertEquals(
+          0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, false));
       assertTrue(
           "Expecting version bump",
           solrconfigZkVersion
@@ -622,19 +624,48 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       for (String f : extraFiles) {
         zkClient.makePath(f, true);
       }
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2));
+      assertEquals(
+          0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, false));
       for (String f : extraFiles) {
         assertTrue(
             "Expecting file " + f + " to exist in ConfigSet but it's gone",
             zkClient.exists(f, true));
       }
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, null, true, true, v2));
+      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, null, true, true, v2, false));
       for (String f : extraFiles) {
         assertFalse(
             "Expecting file " + f + " to be deleted from ConfigSet but it wasn't",
             zkClient.exists(f, true));
       }
       assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
+    }
+  }
+
+  @Test
+  public void testOverwriteWithForbiddenFilesV1() throws Exception {
+    testOverwriteWithForbiddenFiles(false);
+  }
+
+  @Test
+  public void testOverwriteWithForbiddenFilesV2() throws Exception {
+    testOverwriteWithForbiddenFiles(true);
+  }
+
+  public void testOverwriteWithForbiddenFiles(boolean v2) throws Exception {
+    String configsetName = "regular";
+    String configsetSuffix = "testOverwriteWithForbiddenFiles-1-" + v2;
+    uploadConfigSetWithAssertions(configsetName, configsetSuffix, null);
+    try (SolrZkClient zkClient =
+        new SolrZkClient(
+            cluster.getZkServer().getZkAddress(), AbstractZkTestCase.TIMEOUT, 45000, null)) {
+      String configPath = "/configs/" + configsetName + configsetSuffix;
+      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, true));
+      for (String fileEnding : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+        String f = configPath + "/test." + fileEnding;
+        assertFalse(
+            "Expecting file " + f + " to not exist, because it has a forbidden file type",
+            zkClient.exists(f, true));
+      }
     }
   }
 
@@ -659,7 +690,8 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       int solrconfigZkVersion =
           getConfigZNodeVersion(zkClient, configsetName, configsetSuffix, "solrconfig.xml");
       // Was untrusted, overwrite with untrusted
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2));
+      assertEquals(
+          0, uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, false));
       assertTrue(
           "Expecting version bump",
           solrconfigZkVersion
@@ -669,7 +701,8 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
           getConfigZNodeVersion(zkClient, configsetName, configsetSuffix, "solrconfig.xml");
 
       // Was untrusted, overwrite with trusted but no cleanup
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, false, v2));
+      assertEquals(
+          0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, false, v2, false));
       assertTrue(
           "Expecting version bump",
           solrconfigZkVersion
@@ -694,7 +727,8 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
           "Either empty zipped data, or non-zipped data was passed. In order to upload a configSet, you must zip a non-empty directory to upload.");
 
       // Was untrusted, overwrite with trusted with cleanup
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, true, v2));
+      assertEquals(
+          0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, true, v2, false));
       assertTrue(
           "Expecting version bump",
           solrconfigZkVersion
@@ -708,7 +742,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertEquals(
           "Can't upload a trusted configset with an untrusted request",
           400,
-          uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2));
+          uploadConfigSet(configsetName, configsetSuffix, null, true, false, v2, false));
       assertEquals(
           "Expecting version to remain equal",
           solrconfigZkVersion,
@@ -720,7 +754,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertEquals(
           "Can't upload a trusted configset with an untrusted request",
           400,
-          uploadConfigSet(configsetName, configsetSuffix, null, true, true, v2));
+          uploadConfigSet(configsetName, configsetSuffix, null, true, true, v2, false));
       assertEquals(
           "Expecting version to remain equal",
           solrconfigZkVersion,
@@ -729,7 +763,8 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       unIgnoreException("Trying to make an unstrusted ConfigSet update on a trusted configSet");
 
       // Was trusted, overwrite with trusted no cleanup
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, false, v2));
+      assertEquals(
+          0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, false, v2, false));
       assertTrue(
           "Expecting version bump",
           solrconfigZkVersion
@@ -739,7 +774,8 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
           getConfigZNodeVersion(zkClient, configsetName, configsetSuffix, "solrconfig.xml");
 
       // Was trusted, overwrite with trusted with cleanup
-      assertEquals(0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, true, v2));
+      assertEquals(
+          0, uploadConfigSet(configsetName, configsetSuffix, "solr", true, true, v2, false));
       assertTrue(
           "Expecting version bump",
           solrconfigZkVersion
@@ -1014,6 +1050,51 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       assertTrue(isTrusted(zkClient, configsetName, configsetSuffix));
       assertConfigsetFiles(configsetName, configsetSuffix, zkClient);
       unIgnoreException("Trying to make an unstrusted ConfigSet update on a trusted configSet");
+    }
+  }
+
+  @Test
+  public void testSingleFileForbiddenTypeV1() throws Exception {
+    testSingleFileForbiddenType(false);
+  }
+
+  @Test
+  public void testSingleFileForbiddenTypeV2() throws Exception {
+    testSingleFileForbiddenType(true);
+  }
+
+  public void testSingleFileForbiddenType(boolean v2) throws Exception {
+    String configsetName = "regular";
+    String configsetSuffix = "testSingleFileForbiddenType-1-" + v2;
+    uploadConfigSetWithAssertions(configsetName, configsetSuffix, "solr");
+    try (SolrZkClient zkClient =
+        new SolrZkClient(
+            cluster.getZkServer().getZkAddress(), AbstractZkTestCase.TIMEOUT, 45000, null)) {
+      for (String fileType : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+        ignoreException("is forbidden for use in configSets");
+        assertEquals(
+            "Can't upload a configset file with a forbidden type: " + fileType,
+            400,
+            uploadSingleConfigSetFile(
+                configsetName,
+                configsetSuffix,
+                "solr",
+                "solr/configsets/upload/regular/solrconfig.xml",
+                "/test/different/path/solrconfig." + fileType,
+                false,
+                false,
+                v2));
+        assertFalse(
+            "New file should not exist, since the filetype is forbidden: " + fileType,
+            zkClient.exists(
+                "/configs/"
+                    + configsetName
+                    + configsetSuffix
+                    + "/test/different/path/solrconfig."
+                    + fileType,
+                true));
+        unIgnoreException("is forbidden for use in configSets");
+      }
     }
   }
 
@@ -1388,7 +1469,7 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       String configSetName, String suffix, String username, SolrZkClient zkClient, boolean v2)
       throws IOException {
     assertFalse(getConfigSetService().checkConfigExists(configSetName + suffix));
-    return uploadConfigSet(configSetName, suffix, username, false, false, v2);
+    return uploadConfigSet(configSetName, suffix, username, false, false, v2, false);
   }
 
   private long uploadConfigSet(
@@ -1397,12 +1478,16 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       String username,
       boolean overwrite,
       boolean cleanup,
-      boolean v2)
+      boolean v2,
+      boolean forbiddenTypes)
       throws IOException {
 
     // Read zipped sample config
     return uploadGivenConfigSet(
-        createTempZipFile("solr/configsets/upload/" + configSetName),
+        forbiddenTypes
+            ? createTempZipFileWithForbiddenTypes(
+                "solr/configsets/upload/" + configSetName + "/solrconfig.xml")
+            : createTempZipFile("solr/configsets/upload/" + configSetName),
         configSetName,
         suffix,
         username,
@@ -1551,6 +1636,55 @@ public class TestConfigSetsAPI extends SolrCloudTestCase {
       return zipFile;
     } catch (IOException e) {
       throw new RuntimeException(e);
+    }
+  }
+
+  /**
+   * Create a zip file (in the temp directory) containing a file with all forbidden types (named
+   * "test.fileType")
+   */
+  private File createTempZipFileWithForbiddenTypes(String file) {
+    try {
+      final File zipFile = createTempFile("configset", "zip").toFile();
+      final File directory = SolrTestCaseJ4.getFile(file);
+      if (log.isInfoEnabled()) {
+        log.info("Directory: {}", directory.getAbsolutePath());
+      }
+      zipWithForbiddenEndings(directory, zipFile);
+      if (log.isInfoEnabled()) {
+        log.info("Zipfile: {}", zipFile.getAbsolutePath());
+      }
+      return zipFile;
+    } catch (IOException e) {
+      throw new RuntimeException(e);
+    }
+  }
+
+  private static void zipWithForbiddenEndings(File file, File zipfile) throws IOException {
+    OutputStream out = new FileOutputStream(zipfile);
+    ZipOutputStream zout = new ZipOutputStream(out);
+    try {
+      for (String fileType : ZkMaintenanceUtils.DEFAULT_FORBIDDEN_FILE_TYPES) {
+        zout.putNextEntry(new ZipEntry("test." + fileType));
+
+        InputStream in = new FileInputStream(file);
+        try {
+          byte[] buffer = new byte[1024];
+          while (true) {
+            int readCount = in.read(buffer);
+            if (readCount < 0) {
+              break;
+            }
+            zout.write(buffer, 0, readCount);
+          }
+        } finally {
+          in.close();
+        }
+
+        zout.closeEntry();
+      }
+    } finally {
+      zout.close();
     }
   }
 
